BACKGROUND IMAGE ADD

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
                 <li><h5>logout</h5></li>
             </ul>
         </div>
-        <div class="container">
         <!-- main logo -->
         <div class="main-header-content">
         <div class="main-logo">
@@ -48,7 +47,7 @@
             </div>
             <div id="pop-up-mobile-window"></div>
         </div>
-        </div>
+        
     </header>
     <!-- showcase -->
     <div class="showcase-mobile">
@@ -151,45 +150,16 @@
     </div>
     <!-- faculty details -->
     <section class="trainer-details">
-        <h2 class="text-center">Our Experts</h2>
+        <h3 class="text-center">Our Experts</h3>
         <div class="orange-line-mobile">
             <span class="orange-bar-mobile"></span>
         </div>
         <br>
-
-        <div class="trainer-1">
-            <div class="trainer-1-image">
-                <img src="./images/teacher-1.png" width = 120 height = 120 alt="">
-            </div>
-            <div class="trainer-1-details">
-                <h3>Yochai Benkler</h3>
-                <p class="red-para">Lorem ipsum dolor sit amet 
-                consectetur adipisicing elit.
-                Iste, vero adipisci provident</p>
-                <p>Lorem ipsum dolor sit, amet consectetur 
-                 adipisicing elit. Totam sunt inventore 
-                 asi ratione beatae nesciunt, nobis </p>
-            </div>
-        </div>
-
-        <div class="trainer-1">
-            <div class="trainer-1-image">
-                <img src="./images/teacher-2.jpg" width = 120 height = 120 alt="">
-            </div>
-            <div class="trainer-2-details">
-                <h3>SohYeong Noh</h3>
-                <p class="red-para">Lorem ipsum dolor sit amet 
-                consectetur adipisicing elit.
-                Iste, vero adipisci provident</p>
-                <p>Lorem ipsum dolor sit, amet consectetur 
-                 adipisicing elit. Totam sunt inventore 
-                 asi ratione beatae nesciunt, nobis </p>
-            </div>
-        </div>
+        <!-- dynamic grid -->
+        <div class="speaker"></div>
         <button class="more-button" type="button">MORE</button>
         <div class="image-grig"></div>
     </section>
-    <div class="partner-image-template"></div>
     <footer class="footer-1">
         <div class="footer-content">
         <p><span class="main-logo-body">Orange</span> Intelligence</p> 
