--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
 
     <div class="box-2">
         
-        <img src="./images/Orange-I-logo.jpg" width = 100% height= 290 alt="">
+        <img src="./images/Orange-I-logo.jpg" width = 350 height= 290 alt="">
     </div>
 
     <section class="previous-class">
@@ -104,7 +104,7 @@
     </section>
     <br><br>
 
-    <div class="image-partner-mob"><img class = "partner-image-set2" src="./images/Partners -1.jpg" alt=""></div>
+    <div class="image-partner-mob"><img class = "partner-image-set2" src="./images/Partners-1.jpg" alt="main-img"></div>
 
     <footer class="about-footer">
         <div class="footer-content">
