--- a/about.html
+++ b/about.html
@@ -15,11 +15,11 @@
         <!-- black header contain social icon -->
         <div class="black-head">
             <ul>
-                <li><img src="./images/Linkedin-icon.svg" width = 12 height = 12 alt=""></li>
-                <li><img src="./images/twitter-1.svg" width = 12 height = 12 alt=""></li>
-                <li><h5>English</h5></li>
-                <li><h5>My Page</h5></li>
-                <li><h5>logout</h5></li>
+                <li><a href="www.linkedin.com/in/shubhscb"><img src="./images/Linkedin-icon.svg" width = 12 height = 12 alt=""></a></li>
+                <li><a href="#"><img src="./images/twitter-1.svg" width = 12 height = 12 alt=""></a></li>
+                <li><a href="about.html"><h5>English</h5></a></li>
+                <li><a href="#"><h5>My Page</h5></a></li>
+                <li><a href="#"><h5>logout</h5</a></li>
             </ul>
         </div>
         <!-- main logo -->
