--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
 
     <div class="box-2">
         
-        <img src="./images/Orange-I-logo.jpg" width = 350 height= 290 alt="">
+        <img class = "company-name-mody-sec" src="./images/Orange-I-logo.jpg" alt="">
     </div>
 
     <section class="previous-class">
