--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
         <div class="course-modules-mobile">
             <div class="html-mobile box-flex">
                 <div class="html-logo">
-                    <img src="./images/js.png" width = 20 height = 20 alt="">
+                    <img src="./images/html.png" width = 20 height = 20 alt="">
                 </div>
                 <div class="skill-name-mobile">
                     <h4 class="orange-text">HTML-5</h4>
                 </div>
                 <div class="html-details">
-                    <p class=" white-text text-center">Lorem ipsum dolor sit, amet consectetur 
+                    <p class= "white-text">Lorem ipsum dolor sit, amet consectetur 
                         adipisicing elit. Eaque atque.</p>
                 </div>
             </div>
@@ -94,52 +94,52 @@
 
             <div class="css-mobile box-flex">
                 <div class="html-logo">
-                    <img src="./images/js.png" width = 20 height = 20 alt="">
+                    <img src="./images/stackoverflow.svg" width = 20 height = 20 alt="">
                 </div>
                 <div class="skill-name-mobile">
                     <h4 class="orange-text">CSS-3</h4>
                 </div>
                 <div class="css-details">
-                    <p class="white-text text-center">Lorem ipsum dolor sit, amet consectetur 
+                    <p class="white-text">Lorem ipsum dolor sit, amet consectetur 
                         adipisicing elit. Eaque atque.</p>
                 </div>
             </div>
 
             <div class="javascript-mobile box-flex">
                 <div class="html-logo">
-                    <img src="./images/js.png" width = 20 height = 20 alt="">
+                    <img src="./images/Java.png" width = 20 height = 20 alt="">
                 </div>
                 <div class="skill-name-mobile">
                     <h4 class="orange-text">JavaScript</h4>
                 </div>
                 <div class="javaScript-details">
-                    <p class="white-text text-center">Lorem ipsum dolor sit, amet consectetur 
+                    <p class="white-text">Lorem ipsum dolor sit, amet consectetur 
                         adipisicing elit. Eaque atque.</p>
                 </div>
             </div>
 
             <div class="bootstrap-mobile box-flex">
                 <div class="html-logo">
-                    <img src="./images/js.png" width = 20 height = 20 alt="">
+                    <img src="./images/stackoverflow.svg" width = 20 height = 20 alt="">
                 </div>
                 <div class="skill-name-mobile">
                     <h4 class="orange-text">Bootstrap</h4>
                 </div>
                 <div class="bootstrap-details">
-                    <p class="white-text text-center">Lorem ipsum dolor sit, amet consectetur 
+                    <p class="white-text">Lorem ipsum dolor sit, amet consectetur 
                         adipisicing elit. Eaque atque.</p>
                 </div>
             </div>
 
             <div class="react-mobile box-flex">
                 <div class="html-logo">
-                    <img src="./images/js.png" width = 20 height = 20 alt="">
+                    <img src="./images/html.png" width = 20 height = 20 alt="">
                 </div>
                 <div class="skill-name-mobile">
                     <h4 class="orange-text">React jS</h4>
                 </div>
                 <div class="react-details">
-                    <p class="white-text text-center">Lorem ipsum dolor sit, amet consectetur 
+                    <p class="white-text">Lorem ipsum dolor sit, amet consectetur 
                         adipisicing elit. Eaque atque.</p>
                 </div>
             </div>
@@ -158,6 +158,7 @@
         <!-- dynamic grid -->
         <div class="speaker">
         </div>
+        <div class="partner-image-desktop-2"></div>
 
         <button class="more-button" type="button">MORE</button>
     </section>
