DROPDOWN SHOW MORE BUTTON

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
          <nav class="nav-bar-desktop">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li class="current"><a href="about.html">About</a></li>
                 <li><a href="index.html">Program</a></li>
                 <li><a href="about.html">Contact</a></li>
             </ul>
