--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <!-- header navbar -->
         <nav class="nav-bar-desktop">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li class="current"><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="index.html">Program</a></li>
                 <li><a href="about.html">Contact</a></li>
@@ -168,6 +168,9 @@
         <p>Orange Intelligence, copyright &copy; 2022 India</p>
         </div>
     </footer>
+    <div class="dynamic-footer"></div>
+
     <script src="script.js"></script>
+    <script src="dynami.js"></script>
 </body>
 </html>
