LINTER ERROR FIX

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
     </style>
-    <title>Document</title>
+    <title>Capstone | Shubh</title>
 </head>
 <body>
     <header>
@@ -19,7 +19,7 @@
                 <li><a href="#"><img src="./images/twitter-1.svg" width = 12 height = 12 alt=""></a></li>
                 <li><a href="about.html"><h5>English</h5></a></li>
                 <li><a href="#"><h5>My Page</h5></a></li>
-                <li><a href="#"><h5>logout</h5</a></li>
+                <li> <a href="#"><h5>logout</h5></a></li>
             </ul>
         </div>
         <!-- main logo -->
