--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
     </style>
-    <title>Document</title>
+    <title>Capstone | Shubh</title>
 </head>
 <body>
     <header>
@@ -19,7 +19,7 @@
                 <li><a href="#"><img src="./images/twitter-1.svg" width = 12 height = 12 alt=""></a></li>
                 <li><a href="about.html"><h5>English</h5></a></li>
                 <li><a href="#"><h5>My Page</h5></a></li>
-                <li><a href="#"><h5>logout</h5</a></li>
+                <li><a href="#"><h5>logout</h5></a></li>
             </ul>
         </div>
         <!-- main logo -->
@@ -64,8 +64,8 @@
             </p>
             </div>
             <div class="announcement-mobile-1">
-                <h2 class="start-date-1">New class starts 2022.04.01(FRI)</h2>
-                <p class="location-1">Orange Intelligence, MG Road, Bangalore</p>
+                <h2 class="start-date-1">New class starts 2022.04.01 ~ (FRI)</h2>
+                <p class="location-1">@Orange Intelligence, MG Road, Bangalore</p>
             </div>
         </div>
     </div>
@@ -159,7 +159,7 @@
         <div class="speaker">
         </div>
         <div class="partner-image-desktop-2"></div>
-
+        <br>
         <button class="more-button" type="button">MORE</button>
     </section>
     <footer class="footer-1">
